--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: flatr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Transforms Contingency Tables to Data Frames
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Scott D. Graham
+Maintainer: Scott D. Graham <scott.grah95@gmail.com>
+Description: 
+    Contingency Tables are a pain to work with when you want to run logistic regressions.
+    This package takes them, transforms them into a long data frame, so you can more easily analyse them!
+	As well, you can calculate goodness of fit statistics using this package.
+License: MIT License
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
