--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,4 @@
-^.*\.Rproj$
-^\.Rproj\.user$
+^.*\.Rproj$         # Automatically added by RStudio,
+^\.Rproj\.user$     # used for temporary files.
+^README\.Rmd$       # An Rmarkdown file used to generate README.md
+^cran-comments\.md$ # Comments for CRAN submission
