Removed response parameter in goodness_of_fit()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(goodness_of_fit)
 import(dplyr)
 importFrom(magrittr,"%>%")
 importFrom(stats,coef)
+importFrom(stats,formula)
 importFrom(stats,pchisq)
 importFrom(stats,predict)
 importFrom(tibble,tibble)
