--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,4 +5,4 @@
 ^cran-comments\.md$ # Comments for CRAN submission
 ^NEWS\.md$          # A news file written in Markdown
 ^\.travis\.yml$     # Used for continuous integration testing with travis
-^\.travis\.yml$
+^\ *\.png$          # Logo used for package
